# TRIX-WMA

./: .gitignore  LICENSE  README.md  amzn_audit.txt  amzn_bench_top5.csv  amzn_growth_top5.csv  amzn_hybrid_top5.csv  amzn_optimization_results.csv  amzn_robust_analysis_output.txt  amzn_top20.csv  pyproject.toml  tech_growth_final.txt  tech_growth_results.txt
.github/workflows/: static.yml
config/: amazon_opt.yaml  commodities_opt.yaml  default.yaml  forex_opt.yaml  golden_zone.yaml  performance_test.yaml  tech_growth.yaml  tech_opt.yaml  verification.yaml
docs/: article.html  index.html
reports/: latest.md  summary.json
scripts/: analyze_amzn.py  analyze_gold.py  check_status.py  debug_html.py  find_chart_context.py  find_robust_amzn.py  fix_article_image.py  generate_equity_curves.py  get_amzn_metrics.py  get_gold_b64.py  get_nvda_metrics.py  optimize_amzn.py  optimize_gold.py  optimize_tech_growth.py  patch_article.py  patch_tech_growth.py  read_results.py  regenerate_gold.py  run_all.ps1
src/trixwma/: __init__.py  backtest.py  cli.py  data.py  grid.py  monte_carlo.py  plots.py  report.py  robustness.py  strategy.py  validation.py
src/trixwma.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_indicators.py  test_no_lookahead.py  test_production.py  test_strategy_logic.py
trix_wma_robustness/: .gitignore
trix_wma_robustness/config/: metals_opt.yaml
trix_wma_robustness/scripts/: plot_amzn.py
trix_wma_robustness/src/trixwma/: __main__.py  indicators.py  (+1 more)
trix_wma_robustness/tests/: test_backtest_smoke.py
